# Orca_ROS

./: .gitattributes  .gitignore  QUICK_START_WINDOWS.md  README.md  TESTING_GUIDE.md  WINDOWS_SETUP.md  docker-build.bat  docker-run-gui.bat  make_scripts_executable.sh  setup_xserver.bat  test-all.sh  test-gazebo.sh  test-mission.sh  test-rviz.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
src/: CMakeLists.txt
src/orca_bringup/: CMakeLists.txt  README.md  package.xml
src/orca_bringup/launch/: object_retrieval_mission.launch  orca_complete.launch  orca_core.launch  orca_simulation.launch  water_sampling_mission.launch
src/orca_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/orca_control/cfg/: ThrusterControl.cfg
src/orca_control/config/: controllers.yaml
src/orca_control/include/orca_control/: depth_controller.h  heading_controller.h  thruster_allocator.h
src/orca_control/launch/: control.launch
src/orca_control/scripts/: gripper_control.py
src/orca_control/src/: depth_controller.cpp  heading_controller.cpp  thruster_allocator.cpp
src/orca_control/src/orca_control/: __init__.py
src/orca_description/: CMakeLists.txt  README.md  package.xml
src/orca_description/launch/: display.launch  gazebo.launch
src/orca_description/rviz/: orca.rviz  orca_simple.rviz
src/orca_description/urdf/: grippers.xacro  orca.urdf.xacro  sensors.xacro  thrusters.xacro
src/orca_description/worlds/: underwater.world
src/orca_hw_interface/: CMakeLists.txt  README.md  package.xml  setup.py
src/orca_hw_interface/config/: hardware.yaml
src/orca_hw_interface/config/calibration/: front_camera.yaml  realsense.yaml  rear_camera.yaml
src/orca_hw_interface/include/orca_hw_interface/: ms5837.h
src/orca_hw_interface/launch/: hardware.launch
src/orca_hw_interface/scripts/: camera_config.py
src/orca_hw_interface/src/: ms5837.cpp  pressure_sensor_node.cpp
src/orca_hw_interface/src/orca_hw_interface/: __init__.py
src/orca_missions/: CMakeLists.txt  README.md  package.xml  setup.py
src/orca_missions/config/: missions.yaml
src/orca_missions/launch/: object_retrieval.launch  water_sampling.launch
src/orca_missions/scripts/: object_retrieval_mission.py  water_sampling_mission.py
src/orca_missions/src/orca_missions/: __init__.py
src/orca_perception/: CMakeLists.txt  README.md  package.xml  setup.py
src/orca_perception/config/: perception.yaml
src/orca_perception/include/orca_perception/: length_measurement.h
src/orca_perception/launch/: perception.launch
src/orca_perception/scripts/: object_detection.py
src/orca_perception/src/: length_measurement_node.cpp
src/orca_perception/src/orca_perception/: __init__.py
