<?xml version="1.0"?>
<package format="2">
  <name>orca_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files for the Orca ROV
  </description>

  <maintainer email="user@example.com">Orca Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>orca_description</exec_depend>
  <exec_depend>orca_control</exec_depend>
  <exec_depend>orca_hw_interface</exec_depend>
  <exec_depend>orca_perception</exec_depend>
  <exec_depend>orca_missions</exec_depend>
  
  <export>
  </export>
</package>
