<?xml version="1.0"?>
<package format="2">
  <name>orca_hw_interface</name>
  <version>0.1.0</version>
  <description>
    Hardware interface for the Orca ROV
  </description>

  <maintainer email="user@example.com">Orca Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>i2c-dev</depend>
  
  <export>
  </export>
</package>
