<?xml version="1.0"?>
<package format="2">
  <name>orca_missions</name>
  <version>0.1.0</version>
  <description>
    Mission planning and execution for the Orca ROV
  </description>

  <maintainer email="user@example.com">Orca Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>mavros_msgs</depend>
  
  <export>
  </export>
</package>
